All items are now editable

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
         <script src="scripts/services/linkedIn.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/services/editor.js"></script>
+        <script src="scripts/directives/contenteditable.js"></script>
         <!-- endbuild -->
   </body>
 </html>
